logs/nlpkit.log
Listing '.'...
Listing './bin'...
Compiling './bin/corenlp-tag.py'...
Compiling './bin/mate-parse.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/nlpkit'...
Compiling './lib/python3.5/site-packages/nlpkit/io.py'...
***   File "./lib/python3.5/site-packages/nlpkit/io.py", line 111
    print "{} {}".format(value_fname, key_fname)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nlpkit/mattr.py'...
***   File "./lib/python3.5/site-packages/nlpkit/mattr.py", line 29
    print mattr(seq,n=3)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nlpkit/parse'...
Compiling './lib/python3.5/site-packages/nlpkit/parse/test_mate.py'...
***   File "./lib/python3.5/site-packages/nlpkit/parse/test_mate.py", line 35
    print out_file.read()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nlpkit/preprocessing'...
Compiling './lib/python3.5/site-packages/nlpkit/preprocessing/markup.py'...
***   File "./lib/python3.5/site-packages/nlpkit/preprocessing/markup.py", line 39
    print strip_html("<html><head><title>test<body><h1>page title</h3>")
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nlpkit/wordnet'...
Compiling './lib/python3.5/site-packages/nlpkit/wordnet/germanet.py'...
***   File "./lib/python3.5/site-packages/nlpkit/wordnet/germanet.py", line 81
    print tagged_word
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nlpkit/wordnet/wn30.py'...
***   File "./lib/python3.5/site-packages/nlpkit/wordnet/wn30.py", line 42
    print "Error while parsing {}: {}".format(filename, line)
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nlpkit-0.35.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
